Fixed material form styling, added overlapping form element

--- a/src/assets/sass/modules/about.scss
+++ b/src/assets/sass/modules/about.scss
@@ -1,11 +1,11 @@
 #mainNav {
 
-	background-color:#cb2a1d;
+	background-color: $primary;
 }
 
 .btn {
-	background-color:#cb2a1d;
-	border:none;
+	background-color: $primary;
+	border: none;
 	
 }
 
